<resources>
    <string name="app_name">Akshat</string>

    <string name="action_settings">Settings</string>
    <string name="main_title">Android Sudoku</string>>
    <string name="continue_label">Continue</string>>
    <string name="new_label">new game</string>>
    <string name="about_label">About</string>>
    <string name="exit_label">Chao</string>>




    <string name="about_title">About Sudoku Settings</string>

    <string name="text">Sudoku is a logic based number placement puzzle.
        Starting with a partially completed 9*9 grid , the
        objective is to fill the grid so that each
        row,each column, and each of the 3*3 boxes
        {also called <i><b>blocks</b></i>}contains the digits
        1to9 exactly once
    </string>


    <string name="setting_label">Settings...</string>
    <string name="setting_title"><b>Sudoku settings</b></string>
    <string name="setting_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Playback songs</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">show hints during play</string>


    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label"> Medium</string>
    <string name="hard_label">Hard</string>


    <string name="game_title">Game</string>
    <string name="no_moves_label">No Moves</string>
    <string name="keypad_title">Keypad</string>

</resources>
